# M5StackTab5-quake

./: README.md  platformio.ini  sdkconfig.defaults
components/quakegeneric/quakegeneric/source/: common.h  quakedef.h  quakegeneric.h
main/: .#tab5_main.cpp  CMakeLists.txt  btn0.cpp  btn1.cpp  display.h  eth_connect.c  input.c  input.h  tab5_display.cpp  tab5_input.cpp  tab5_main.cpp
screen_revive/src/: main.cpp
